EXTRA_DIST = elliot-goldenthal.id3v1.tag cerulean.mp3 opium.mp3 lorca.mp3 \
id3v1.2.3.tag report-golden.csv dump1-golden.log dump2-golden.log \
id3v1.2.4.tag rock-the-joint.id3v2.3.tag splitA.md5 id3v1-ext.tag splitB.md5 \
id3v1.tag track.2.2.dat track.2.3.dat id3v2.2.tag track.2.4.dat \
id3v2.3.tag id3v2.4.tag track.dat joao.mp3 track.v1-ext.dat \
on-green-dolphin-street.mp3 u2-promenade.mp3 sleepwalking.mp3 \
红颜旧.mp3 nin-only-time.mp3 forbidden.mp3 life.mp3 waterfall.mp3 \
nan-1.mp3 lunch4bfast.mp3 lunch4bfast2.mp3 orlando.mp3 compressed.mp3 \
duplicate_id3v2.mp3 with-track-in-golden.log unsynch.id3 searchresults.dat \
id3v22-tda.mp3 230-compressed.tag 230-picture.tag ozzy.tag rare_frames.mp3 \
golden-test-cleanup-encoded-by.out id3v2.4.ext.tag
